# MineracaoContas

./: Dockerfile  README.md  requirements.txt
addicted/: pyproject.toml
addicted/addicted/: app.py
addicted/tests/: test_addicted.py
