[tool.poetry]
name = "addicted"
version = "0.1.0"
description = ""
authors = ["amarabuco <adrianomal@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
plotly = "^5.10.0"
streamlit = "^1.12.2"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
